--- a/index.html
+++ b/index.html
@@ -5,11 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Instagram</title>
 </head>
 
 <body>
-
+    <div class="insta-wrapper">
+        <div class="insta-phone">
+            <img src="./img/Iphone.png" alt="celularI">
+        </div>
+        <div class="insta-login">
+            <div class="group">
+                <img src="./img/silhueta-do-instagram.png" class="insta-logo" alt="logoInsta">
+                <div class="profile-photo">
+                    <img src="./img/insta.png" alt="photo-prefil">
+                </div>
+                <a href="#" class="login">Login account</a>
+                <a href="#" class="logout">Remove account</a>
+            </div>
+            <div class="group">
+                <p class="not-account">No, and you?</p>
+                <p class="notaccount">
+                    <span class="linkblue">Trade Account</span>
+                    or
+                    <span class="linkblue">Sign Up</span>
+                </p>
+            </div>
+            <div class="get-the-app">
+                <p class="get-app">Get the app</p>
+                <div class="download">
+                    <a href="#" class="app-download"></a>
+                    <a href="#" class="app-download"></a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
